--- a/EmployeeAccessAmazon.ipynb
+++ b/EmployeeAccessAmazon.ipynb
@@ -6,7 +6,7 @@
       "name": "EmployeeAccessAmazon.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyN3Sc8yH4nZoNFui9YbuIhg",
+      "authorship_tag": "ABX9TyPoemIh4/+k6J62OYTuiX12",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,147 +40,21 @@
         "from sklearn.svm import SVC\r\n",
         "from sklearn.metrics import f1_score"
       ],
-      "execution_count": 46,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 204
-        },
-        "id": "jXYoALG0_Lsi",
-        "outputId": "490aca80-31cc-4648-a65c-4d8f8dc07271"
+        "id": "jXYoALG0_Lsi"
       },
       "source": [
         "# load the data\r\n",
         "traindf = pd.read_csv('train.csv')\r\n",
         "testdf = pd.read_csv('test.csv')"
       ],
-      "execution_count": 8,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>id</th>\n",
-              "      <th>RESOURCE</th>\n",
-              "      <th>MGR_ID</th>\n",
-              "      <th>ROLE_ROLLUP_1</th>\n",
-              "      <th>ROLE_ROLLUP_2</th>\n",
-              "      <th>ROLE_DEPTNAME</th>\n",
-              "      <th>ROLE_TITLE</th>\n",
-              "      <th>ROLE_FAMILY_DESC</th>\n",
-              "      <th>ROLE_FAMILY</th>\n",
-              "      <th>ROLE_CODE</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>1</td>\n",
-              "      <td>78766</td>\n",
-              "      <td>72734</td>\n",
-              "      <td>118079</td>\n",
-              "      <td>118080</td>\n",
-              "      <td>117878</td>\n",
-              "      <td>117879</td>\n",
-              "      <td>118177</td>\n",
-              "      <td>19721</td>\n",
-              "      <td>117880</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>2</td>\n",
-              "      <td>40644</td>\n",
-              "      <td>4378</td>\n",
-              "      <td>117961</td>\n",
-              "      <td>118327</td>\n",
-              "      <td>118507</td>\n",
-              "      <td>118863</td>\n",
-              "      <td>122008</td>\n",
-              "      <td>118398</td>\n",
-              "      <td>118865</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>3</td>\n",
-              "      <td>75443</td>\n",
-              "      <td>2395</td>\n",
-              "      <td>117961</td>\n",
-              "      <td>118300</td>\n",
-              "      <td>119488</td>\n",
-              "      <td>118172</td>\n",
-              "      <td>301534</td>\n",
-              "      <td>249618</td>\n",
-              "      <td>118175</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>4</td>\n",
-              "      <td>43219</td>\n",
-              "      <td>19986</td>\n",
-              "      <td>117961</td>\n",
-              "      <td>118225</td>\n",
-              "      <td>118403</td>\n",
-              "      <td>120773</td>\n",
-              "      <td>136187</td>\n",
-              "      <td>118960</td>\n",
-              "      <td>120774</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>5</td>\n",
-              "      <td>42093</td>\n",
-              "      <td>50015</td>\n",
-              "      <td>117961</td>\n",
-              "      <td>118343</td>\n",
-              "      <td>119598</td>\n",
-              "      <td>118422</td>\n",
-              "      <td>300136</td>\n",
-              "      <td>118424</td>\n",
-              "      <td>118425</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div>"
-            ],
-            "text/plain": [
-              "   id  RESOURCE  MGR_ID  ...  ROLE_FAMILY_DESC  ROLE_FAMILY  ROLE_CODE\n",
-              "0   1     78766   72734  ...            118177        19721     117880\n",
-              "1   2     40644    4378  ...            122008       118398     118865\n",
-              "2   3     75443    2395  ...            301534       249618     118175\n",
-              "3   4     43219   19986  ...            136187       118960     120774\n",
-              "4   5     42093   50015  ...            300136       118424     118425\n",
-              "\n",
-              "[5 rows x 10 columns]"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 8
-        }
-      ]
+      "execution_count": 2,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -189,13 +63,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MeTmdbohCxwW",
-        "outputId": "040d9e2c-4716-4c91-a4d6-9a5c40a103dc"
+        "outputId": "97803cc7-a27c-47f7-ad2d-653eaed611e2"
       },
       "source": [
         "# now let's make explration to the data\r\n",
         "traindf['ACTION'].value_counts()"
       ],
-      "execution_count": 10,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -209,7 +83,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 10
+          "execution_count": 3
         }
       ]
     },
@@ -221,7 +95,7 @@
           "height": 1000
         },
         "id": "U5XqRZtWDIuE",
-        "outputId": "3f7cbbd7-d148-4abf-cfa1-67250becf6e8"
+        "outputId": "1909cc2c-d12c-43a3-ae23-46dafea45e90"
       },
       "source": [
         "# now we can describe all the coulmn\r\n",
@@ -229,7 +103,7 @@
         "  sns.boxplot(traindf[i].dropna())\r\n",
         "  plt.show()"
       ],
-      "execution_count": 61,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -454,7 +328,7 @@
         "X = traindf.drop('ACTION',axis=1)\r\n",
         "X_test = testdf.drop('id',axis=1)"
       ],
-      "execution_count": 33,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -466,7 +340,7 @@
         "# now we spilt the data\r\n",
         "X_train, X_valid, y_train, y_valid = train_test_split(X, y, test_size=0.25, random_state=1) "
       ],
-      "execution_count": 31,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -476,13 +350,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "kFRmIFSmIY61",
-        "outputId": "6b62ce5e-1b98-4d0e-a5bd-9005777fbcad"
+        "outputId": "bf89d09d-4c42-4def-e9bc-f52e6908d450"
       },
       "source": [
         "clf = SVC()\r\n",
         "clf.fit(X_train, y_train)"
       ],
-      "execution_count": 32,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -497,7 +371,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 32
+          "execution_count": 7
         }
       ]
     },
@@ -508,13 +382,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BtX3qTskKeWv",
-        "outputId": "46da2afa-93a3-425b-bc1c-61429fd3ddc4"
+        "outputId": "cb982a9a-ad39-4634-9fcc-0454a9532d38"
       },
       "source": [
         "# now let's see the score on the test data\r\n",
         "clf.score(X_valid,y_valid)"
       ],
-      "execution_count": 45,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -526,7 +400,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 45
+          "execution_count": 8
         }
       ]
     },
@@ -537,14 +411,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2CkBTBuwNMo9",
-        "outputId": "6f5d48ba-1054-49e4-b88c-f0bff7beb682"
+        "outputId": "b3ed8362-c27b-4757-c491-59a8bcbaf4c6"
       },
       "source": [
         "# let's see the f1 score\r\n",
         "f1 = f1_score(y_valid,clf.predict(X_valid))\r\n",
         "f1"
       ],
-      "execution_count": 48,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -556,7 +430,137 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 48
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 419
+        },
+        "id": "ixd34Q1Gm83Z",
+        "outputId": "125ad2d3-04ce-4ae6-a770-0bcac156ea77"
+      },
+      "source": [
+        "Predictive_Model = pd.DataFrame({\r\n",
+        "        \"Id\": testdf['id'],\r\n",
+        "        \"Action\": clf.predict(X_test)})\r\n",
+        "Predictive_Model.to_csv('amazon_predict.csv', index=False)\r\n",
+        "df2 = pd.read_csv('amazon_predict.csv')\r\n"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Id</th>\n",
+              "      <th>Action</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>2</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>3</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>4</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>5</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>58916</th>\n",
+              "      <td>58917</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>58917</th>\n",
+              "      <td>58918</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>58918</th>\n",
+              "      <td>58919</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>58919</th>\n",
+              "      <td>58920</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>58920</th>\n",
+              "      <td>58921</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>58921 rows × 2 columns</p>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "          Id  Action\n",
+              "0          1       1\n",
+              "1          2       1\n",
+              "2          3       1\n",
+              "3          4       1\n",
+              "4          5       1\n",
+              "...      ...     ...\n",
+              "58916  58917       1\n",
+              "58917  58918       1\n",
+              "58918  58919       1\n",
+              "58919  58920       1\n",
+              "58920  58921       1\n",
+              "\n",
+              "[58921 rows x 2 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 12
         }
       ]
     }
